Speed up InvalidationRegion

Staging invalidation rectangles in a vector allows us to skip building
a complex SkRegion for cases with many invalidations (> 256).  For cases
with fewer invalidations we will still build a full SkRegion.

R=enne@chromium.org
BUG=606069
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2054473002
Cr-Commit-Position: refs/heads/master@{#398755}

Former-commit-id: 62045ceab0fd83013d6cb781ba727d3d3ce68e18