cc/base/invalidation_region.cc
@@ -19,21 +19,38 @@ InvalidationRegion::InvalidationRegion() {}
 InvalidationRegion::~InvalidationRegion() {}
 
 void InvalidationRegion::Swap(Region* region) {
+  FinalizePendingRects();
   region_.Swap(region);
 }
 
 void InvalidationRegion::Clear() {
+  pending_rects_.clear();
   region_.Clear();
 }
 
 void InvalidationRegion::Union(const gfx::Rect& rect) {
-  region_.Union(rect);
-  SimplifyIfNeeded();
+  if (pending_rects_.size() >= kMaxInvalidationRectCount)
+    pending_rects_[0].Union(rect);
+  else
+    pending_rects_.push_back(rect);
 }
 
-void InvalidationRegion::SimplifyIfNeeded() {
-  if (region_.GetRegionComplexity() > kMaxInvalidationRectCount)
-    region_ = region_.bounds();
+void InvalidationRegion::FinalizePendingRects() {
+  if (pending_rects_.empty())
+    return;
+
+  if (region_.GetRegionComplexity() + pending_rects_.size() >
+      kMaxInvalidationRectCount) {
+    gfx::Rect pending_bounds = region_.bounds();
+    for (auto& rect : pending_rects_)
+      pending_bounds.Union(rect);
+    region_ = pending_bounds;
+  } else {
+    for (auto& rect : pending_rects_)
+      region_.Union(rect);
+  }
+
+  pending_rects_.clear();
 }
 
 }  // namespace cc
